API - Fachwahlen der Oberstufe: Anzahl der Wahlen als 3./4. Abi-Fach ergänzt